--- a/templates/html/html-output/tmpl_1.html
+++ b/templates/html/html-output/tmpl_1.html
@@ -1,15 +1,9 @@
-<?php
-$title = 'C нами уже сотрудничают';
-?>
-
 <!-- partners -->
 <div class="partners">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="partners__title text-center">
-                    <?php echo $title; ?>
-                </h3>
+                <h3 class="partners__title text-center">С нами сотрудничают</h3>
             </div>
         </div>
     </div>
