--- a/templates/html/html-output/tmpl_1.html
+++ b/templates/html/html-output/tmpl_1.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="partners__title text-center">С нами сотрудничают</h3>
+                <h3 class="partners__title text-center">Заголовок экрана</h3>
             </div>
         </div>
     </div>
