--- a/templates/html/html-output/tmpl_2.html
+++ b/templates/html/html-output/tmpl_2.html
@@ -1,5 +1,5 @@
 <!-- services -->
-<div class="services">
+<div class="services" style="border-top:3px solid #369;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
