added vars from css_source files

--- a/templates/css/css-output/common/common-styles.css
+++ b/templates/css/css-output/common/common-styles.css
@@ -1,9 +1,4 @@
-<?php
-
-$title = '';
-
-
-$styles = '/*common styles*/
+/*common styles*/
 ul, li {
 	margin: 0;
 	padding: 0;
@@ -29,13 +24,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 @media (max-width: 479px) {
 
-}' .
+}
 
-$title
-
-.
-
-'/*main styles*/
+/*main styles*/
 
 /* прижать футер к низу */
 html,
@@ -80,8 +71,4 @@ body {
 
 .container {
 	max-width: 1030px;
-}';
-
-return $styles;
-
-?>
+}
