--- a/templates/css/css-output/sections/tmpl_2.css
+++ b/templates/css/css-output/sections/tmpl_2.css
@@ -1,11 +1,9 @@
-<?php
-
-
-$styles = '/* ------------------------>>> services <<<----------------------------------------------------- */
+/* ------------------------>>> services <<<----------------------------------------------------- */
 .services {
-	padding: 55px 0 0;
+	padding: 30 0 60;
 	background: #fff url(../img/services/bg/bg_services.jpg) center 0 no-repeat;
 	background-size: cover;
+	border-bottom: 5px solid #369;
 }
 
 .services__title {
@@ -152,8 +150,4 @@ $styles = '/* ------------------------>>> services <<<--------------------------
 
 }
 
-/* ------------------------>>> services End <<<------------------------------------------------- */';
-
-return $styles;
-
-?>
+/* ------------------------>>> services End <<<------------------------------------------------- */
