--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -9,21 +9,53 @@
     </div>
 
     <div class="container partners__container">
-        <div class="row partners__row"><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+        <div class="row partners__row"><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_1.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_2.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_3.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_4.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_5.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_6.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_7.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_8.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_9.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_10.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_11.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_12.jpg" alt="" class="partners__img">
                 </div>
             </div></div>
     </div>
