--- a/templates/css/css-output/common/common-css.css
+++ b/templates/css/css-output/common/common-css.css
@@ -74,6 +74,17 @@ body {
 	display: none;
 }
 
+@media (min-width: 1200px) {
+	.col-lg-20per {
+		width: 20%;
+		float: left;
+		min-height: 1px;
+		padding-left: 5px;
+		padding-right: 5px;
+		position: relative;
+	}
+}
+
 @media (min-width: 992px) {
 	.col-md-20per {
 		width: 20%;
