--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,61 +1,73 @@
 <!-- partners -->
-<div class="partners">
+<div class="partners" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="partners__title text-center text-uppercase">С нами сотрудничают</h3>
+                <h3 class="partners__title text-center text-uppercase">Анюта, привет</h3>
             </div>
         </div>
     </div>
 
     <div class="container partners__container">
-        <div class="row partners__row"><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+        <div class="row partners__row"><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_1.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_2.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_3.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_4.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_5.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_6.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_7.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_8.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_9.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_10.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_11.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-2 col-md-3 col-sm-6 col-xs-6 col-xs-100-479 col-xs-100-380 partners__innerItem">
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_12.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_13.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_14.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-1 col-md-20per col-sm-20per col-xs-3 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_15.jpg" alt="" class="partners__img">
                 </div>
             </div></div>
     </div>
