--- a/templates/html/html-output/sections/tmpl_2.html
+++ b/templates/html/html-output/sections/tmpl_2.html
@@ -1,5 +1,5 @@
 <!-- services -->
-<div class="services">
+<div class="services" id="2">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
