--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -3,31 +3,51 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="partners__title text-right text-capitalize">Hello</h3>
+                <h3 class="partners__title text-center text-uppercase">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
     <div class="container partners__container">
-        <div class="row partners__row"><div class="col-lg-3 col-md-6 col-sm-12 col-xs-1 col-xs-6 col-xs-4 partners__innerItem">
+        <div class="row partners__row"><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_1.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-6 col-sm-12 col-xs-1 col-xs-6 col-xs-4 partners__innerItem">
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_2.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-6 col-sm-12 col-xs-1 col-xs-6 col-xs-4 partners__innerItem">
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_3.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-6 col-sm-12 col-xs-1 col-xs-6 col-xs-4 partners__innerItem">
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_4.jpg" alt="" class="partners__img">
                 </div>
-            </div><div class="col-lg-3 col-md-6 col-sm-12 col-xs-1 col-xs-6 col-xs-4 partners__innerItem">
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
                 <div class="partners__item text-center">
                     <img src="img/partners/photos/partners_5.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_6.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_7.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_8.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_9.jpg" alt="" class="partners__img">
+                </div>
+            </div><div class="col-lg-4 col-md-3 col-sm-20per col-xs-2 col-xs-12 col-xs-2 partners__innerItem">
+                <div class="partners__item text-center">
+                    <img src="img/partners/photos/partners_10.jpg" alt="" class="partners__img">
                 </div>
             </div></div>
     </div>
