--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,36 +1,39 @@
 
 // div[class$="innerItem"]
 
-div[class$="innerItem"] {
-	-webkit-transition: all .6s ease 0s;
-	-moz-transition: all .6s ease 0s;
-	-o-transition: all .6s ease 0s;
-	transition: all .6s ease 0s;
-	position: relative;
-}
+// div[class*="innerItem"] {
+	
+// }
 
-.hover:before {
-	content: "Drop for download";
-	display: block;
+.dropZone {
+	opacity: 0;
 	position: absolute;
 	left: 0;
 	right: 0;
 	top: 0;
 	bottom: 0;
-	padding: 10% 10px 10px;
+	padding: 5px;
+	background-color: rgba(255, 255, 255, .9);
 	text-align: center;
-	color: #000;
-	font-size: 100%;
-	background-color: rgba(255, 255, 255, .8);
+	text-transform: uppercase;
+	font-family: "RobotoBold";
+	font-style: normal;
+	font-weight: normal;
+	font-size: 1rem;
+	border: 2px dashed #369;
 }
 
-div[class$="innerItem"].error:before {
-	content: "Error";
-	background-color: rgba(255, 0, 0, .5);
+.hover {
+	opacity: 1;
 }
 
-div[class$="innerItem"].drop:before {
-	content: "Error";
-	background-color: rgba(255, 0, 0, .5);
-}
+// div[class*="innerItem"].error:before {
+// 	content: "Error";
+// 	background-color: rgba(255, 0, 0, .5);
+// }
+
+// div[class*="innerItem"].drop:before {
+// 	content: "Error";
+// 	background-color: rgba(255, 0, 0, .5);
+// }
 
