--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1214,6 +1214,16 @@ hr {
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
 }
+
+.col-xs-20per {
+  width: 20%;
+  float: left;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: relative;
+}
+
 .col-xs-12 {
   width: 100%;
 }
@@ -1371,6 +1381,16 @@ hr {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
+
+  .col-sm-20per {
+    width: 20%;
+    float: left;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+  }
+
   .col-sm-12 {
     width: 100%;
   }
@@ -1529,6 +1549,16 @@ hr {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
+
+  .col-md-20per {
+    width: 20%;
+    float: left;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+  }
+
   .col-md-12 {
     width: 100%;
   }
@@ -1687,6 +1717,16 @@ hr {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
   }
+
+  .col-lg-20per {
+    width: 20%;
+    float: left;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    position: relative;
+  }
+
   .col-lg-12 {
     width: 100%;
   }
@@ -1841,6 +1881,95 @@ hr {
     margin-left: 0%;
   }
 }
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.text-lowercase {
+  text-transform: lowercase;
+}
+
+.text-capitalize:first-letter {
+  text-transform: uppercase;
+}
+
+@media (max-width: 479px) {
+  .col-479-12 {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+
+  .col-479-6 {
+    width: 50%;
+  }
+
+  .col-479-4 {
+    width: 33.33333333%;
+  }
+
+  .col-479-3 {
+    width: 25%;
+  }
+
+  .col-479-20per {
+    width: 20%;
+  }
+
+  .col-479-2 {
+    width: 16.66666667%;
+  }
+
+  .col-479-1 {
+    width: 8.33333333%;
+  }
+}
+
+@media (max-width: 380px) {
+  .col-380-12 {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+
+  .col-380-6 {
+    width: 50%;
+  }
+
+  .col-380-4 {
+    width: 33.33333333%;
+  }
+
+  .col-380-3 {
+    width: 25%;
+  }
+
+  .col-380-20per {
+    width: 20%;
+  }
+
+  .col-380-2 {
+    width: 16.66666667%;
+  }
+
+  .col-380-1 {
+    width: 8.33333333%;
+  }
+}
+
 .embed-responsive {
   position: relative;
   display: block;
