--- a/templates/css/css-output/common/common-css.css
+++ b/templates/css/css-output/common/common-css.css
@@ -70,87 +70,69 @@ body {
 	text-transform: uppercase;
 }
 
-.hide {
-	display: none;
-}
+@media (max-width: 479px) {
+	.col-479-12 {
+		width: 100%;
+		float: none;
+		text-align: center;
+	}
 
-.col-xs-20per {
-	width: 20%;
-	float: left;
-	min-height: 1px;
-	padding-left: 5px;
-	padding-right: 5px;
-	position: relative;
+	.col-479-6 {
+		width: 50%;
+	}
+
+	.col-479-4 {
+		width: 33.33333333%;
+	}
+
+	.col-479-3 {
+		width: 25%;
+	}
+
+	.col-479-20per {
+		width: 20%;
+	}
+
+	.col-479-2 {
+		width: 16.66666667%;
+	}
+
+	.col-479-1 {
+		width: 8.33333333%;
+	}
 }
 
 @media (max-width: 380px) {
-	.col-xs-100-380 {
+	.col-380-12 {
 		width: 100%;
 		float: none;
 		text-align: center;
 	}
 
-	.col-xs-50-380 {
+	.col-380-6 {
 		width: 50%;
-		float: none;
-		text-align: center;
-	}
-}
-
-@media (max-width: 479px) {
-	.col-xs-100-479 {
-		width: 100%;
-		float: none;
-		text-align: center;
 	}
 
-	.col-xs-50-479 {
-		width: 50%;
-		margin-left: auto;
-		margin-right: auto;
+	.col-380-4 {
+		width: 33.33333333%;
 	}
-}
 
-@media (min-width: 768px) {
-	.col-sm-20per {
+	.col-380-3 {
+		width: 25%;
+	}
+
+	.col-380-20per {
 		width: 20%;
-		float: left;
-		min-height: 1px;
-		padding-left: 5px;
-		padding-right: 5px;
-		position: relative;
+	}
+
+	.col-380-2 {
+		width: 16.66666667%;
+	}
+
+	.col-380-1 {
+		width: 8.33333333%;
 	}
 }
-
-@media (min-width: 992px) {
-	.col-md-20per {
-		width: 20%;
-		float: left;
-		min-height: 1px;
-		padding-left: 5px;
-		padding-right: 5px;
-		position: relative;
-	}
-}
-
-@media (min-width: 1200px) {
-	.col-lg-20per {
-		width: 20%;
-		float: left;
-		min-height: 1px;
-		padding-left: 5px;
-		padding-right: 5px;
-		position: relative;
-	}
-}
-
-
-
-
-
-
-
-
 
 .container {
 	max-width: 1030px;
