--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -5,7 +5,7 @@
 	
 // }
 
-.dropZone {
+.drop__zone {
 	opacity: 0;
 	position: absolute;
 	left: 0;
@@ -13,7 +13,6 @@
 	top: 0;
 	bottom: 0;
 	padding: 5px;
-	background-color: rgba(255, 255, 255, .9);
 	text-align: center;
 	text-transform: uppercase;
 	font-family: "RobotoBold";
@@ -23,17 +22,37 @@
 	border: 2px dashed #369;
 }
 
-.dropHover {
+.drop__hover {
 	opacity: 1;
+	background-color: rgba(255, 255, 255, .9);
+	color: #313131;
 }
 
-// div[class*="innerItem"].error:before {
-// 	content: "Error";
-// 	background-color: rgba(255, 0, 0, .5);
-// }
+/*div[class*="innerItem"].error:before {
+	content: "Error";
+	background-color: rgba(255, 0, 0, .5);
+}*/
 
 .drop {
 	opacity: 1;
 	border-color: rgba(255, 0, 0, .5);
+}
+
+.download__result {
+	opacity: 1;
+
+	background-color: rgba(255, 255, 255, 0);
+	color: #fff;
+	-webkit-text-shadow: text-shadow: 1px 1px 2px black, 0 0 1em red;;
+	   -moz-text-shadow: text-shadow: 1px 1px 2px black, 0 0 1em red;;
+	     -o-text-shadow: text-shadow: 1px 1px 2px black, 0 0 1em red;;
+	        text-shadow: text-shadow: 1px 1px 2px black, 0 0 1em red;;
+}
+
+.download__result.drop__hover {
+	opacity: 1;
+
+	background-color: rgba(255, 255, 255, .9);
+	color: #313131;
 }
 
