--- a/templates/html/html-output/sections/tmpl_2.html
+++ b/templates/html/html-output/sections/tmpl_2.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="services__title text-center text-uppercase">Итальянский язык</div>
+                <div class="services__title text-center text-uppercase">Мы производим</div>
             </div>
         </div>
     </div>
