--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,55 +1,55 @@
-<!-- partners -->
-<div class="partners" id="1">
+<!-- sect -->
+<div class="sect" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="partners__title text-center text-uppercase">С нами уже сотрудничают</h3>
+                <h3 class="sect__title text-left text-uppercase">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
-    <div class="container partners__container">
-        <div class="row partners__row"><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_1.jpg" alt="" class="partners__img">
+    <div class="container sect__container">
+        <div class="row sect__row"><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_1.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_2.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_2.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_3.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_3.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_4.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_4.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_5.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_5.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_6.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_6.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_7.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_7.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_8.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_8.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_9.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_9.jpg" alt="" class="sect__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 partners__innerItem">
-                <div class="partners__item text-center">
-                    <img src="img/partners/photos/partners_10.jpg" alt="" class="partners__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
+                <div class="sect__item text-center">
+                    <img src="img/sect/photos/sect_10.jpg" alt="" class="sect__img">
                 </div>
             </div></div>
     </div>
 </div>
-<!-- partners End -->
+<!-- sect End -->
