--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,5 +1,6 @@
 /* ------------------------>>> drop__zone <<<----------------------------------------------------- */
 .drop__zone {
+	display: block;
 	opacity: 0;
 	position: absolute;
 	left: 0;
