--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,55 +1,55 @@
-<!-- sect -->
-<div class="sect" id="1">
+<!-- new_sect -->
+<div class="new_sect" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="sect__title text-left text-uppercase">С нами уже сотрудничают</h3>
+                <h3 class="new_sect__title text-left text-uppercase">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
-    <div class="container sect__container">
-        <div class="row sect__row"><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_1.jpg" alt="" class="sect__img">
+    <div class="container new_sect__container">
+        <div class="row new_sect__row"><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_1.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_2.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_2.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_3.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_3.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_4.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_4.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_5.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_5.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_6.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_6.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_7.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_7.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_8.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_8.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_9.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_9.jpg" alt="" class="new_sect__img">
                 </div>
-            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 sect__innerItem">
-                <div class="sect__item text-center">
-                    <img src="img/sect/photos/sect_10.jpg" alt="" class="sect__img">
+            </div><div class="col-lg-4 col-md-20per col-sm-3 col-xs-4 col-479-6 col-380-12 new_sect__innerItem">
+                <div class="new_sect__item text-center">
+                    <img src="img/new_sect/photos/new_sect_10.jpg" alt="" class="new_sect__img">
                 </div>
             </div></div>
     </div>
 </div>
-<!-- sect End -->
+<!-- new_sect End -->
