--- a/templates/html/html-output/sections/tmpl_2.html
+++ b/templates/html/html-output/sections/tmpl_2.html
@@ -3,46 +3,41 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="services__title text-center text-uppercase">Мы производим</div>
+                <div class="services__title text-center text-uppercase">Итальянский язык</div>
             </div>
         </div>
     </div>
 
     <div class="container services__container">
-        <div class="row services__row">
-            <div class="col-md-3 col-sm-3 col-xs-6 col-xs-100 services__innerItem">
+        <div class="row services__row"><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
                         <img src="img/services/photos/services_1.jpg" alt="" class="services__img">
                     </div>
                     <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-6 col-xs-100 services__innerItem">
+            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
                         <img src="img/services/photos/services_2.jpg" alt="" class="services__img">
                     </div>
-                    <div class="services__footer text-center">Ввоз заграничных<br> тренажеров по лучшим ценам</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-6 col-xs-100 services__innerItem">
+            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
                         <img src="img/services/photos/services_3.jpg" alt="" class="services__img">
                     </div>
-                    <div class="services__footer text-center">Открытие тренажерного<br> зала "под ключ"</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3 col-xs-6 col-xs-100 services__innerItem">
+            </div><div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-479-100-479 col-380-100-380 services__innerItem">
                 <div class="services__item">
                     <div class="services__header text-center">
                         <img src="img/services/photos/services_4.jpg" alt="" class="services__img">
                     </div>
-                    <div class="services__footer text-center">Ремонт и обслуживание<br> тренажеров</div>
+                    <div class="services__footer text-center">Помощь в подборе<br> спортивного оборудования</div>
                 </div>
-            </div>
-        </div>
+            </div></div>
     </div><!-- services__container -->
 </div>
 <!-- services End -->
