--- a/templates/html/html-output/sections/tmpl_1.html
+++ b/templates/html/html-output/sections/tmpl_1.html
@@ -1,31 +1,55 @@
-<!-- name -->
-<div class="name" id="1">
+<!-- block -->
+<div class="block" id="1">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="name__title text-left text-capitalize">С нами уже сотрудничают</h3>
+                <h3 class="block__title text-center text-uppercase">С нами уже сотрудничают</h3>
             </div>
         </div>
     </div>
 
-    <div class="container name__container">
-        <div class="row name__row"><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 name__innerItem">
-                <div class="name__item text-center">
-                    <img src="img/name/photos/name_1.jpg" alt="" class="name__img">
+    <div class="container block__container">
+        <div class="row block__row"><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_1.jpg" alt="" class="block__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 name__innerItem">
-                <div class="name__item text-center">
-                    <img src="img/name/photos/name_2.jpg" alt="" class="name__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_2.jpg" alt="" class="block__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 name__innerItem">
-                <div class="name__item text-center">
-                    <img src="img/name/photos/name_3.jpg" alt="" class="name__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_3.jpg" alt="" class="block__img">
                 </div>
-            </div><div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 col-479-6 col-380-12 name__innerItem">
-                <div class="name__item text-center">
-                    <img src="img/name/photos/name_4.jpg" alt="" class="name__img">
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_4.jpg" alt="" class="block__img">
+                </div>
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_5.jpg" alt="" class="block__img">
+                </div>
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_6.jpg" alt="" class="block__img">
+                </div>
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_7.jpg" alt="" class="block__img">
+                </div>
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_8.jpg" alt="" class="block__img">
+                </div>
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_9.jpg" alt="" class="block__img">
+                </div>
+            </div><div class="col-lg-3 col-md-3 col-sm-4 col-xs-6 col-479-12 col-380-6 block__innerItem">
+                <div class="block__item text-center">
+                    <img src="img/block/photos/block_10.jpg" alt="" class="block__img">
                 </div>
             </div></div>
     </div>
 </div>
-<!-- name End -->
+<!-- block End -->
